--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ GoogleService-Info.plist
 .xcuserstate
 .xcbkptlist
 *xcworkspace/xcuserdata/*
+JTTD.xcodeproj/xcuserdata/jasonhoffman.xcuserdatad/xcschemes/xcschememanagement.plist
+JTTD.xcodeproj/project.pbxproj
